Apply suggestions from code review
Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

--- a/c-api/arg.po
+++ b/c-api/arg.po
@@ -447,7 +447,7 @@ msgid ""
 msgstr ""
 "Requiere que el objeto Python es un objeto Unicode, sin intentar ninguna "
 "conversión. Lanza :exc:`TypeError` si el objeto no es un objeto Unicode. La "
-"variable C también puede ser declarado como :c:type:`PyObject*`."
+"variable C también puede ser declarada como :c:type:`PyObject*`."
 
 #: ../Doc/c-api/arg.rst:192
 msgid "``w*`` (read-write :term:`bytes-like object`) [Py_buffer]"
@@ -559,7 +559,7 @@ msgid ""
 msgstr ""
 "Requiere tres argumentos. El primero solo se usa como entrada, y debe ser :c:"
 "type:`const char*` que apunta al nombre de una codificación como una cadena "
-"terminada en NUL, o ``NULL``, en cuyo caso ``Se utiliza la codificación "
+"de caracteres terminada en NUL, o ``NULL``, en cuyo caso ``Se utiliza la codificación "
 "'utf-8'``. Se lanza una excepción si Python no conoce la codificación con "
 "nombre. El segundo argumento debe ser :c:type:`char**`; El valor del puntero "
 "al que hace referencia se establecerá en un búfer con el contenido del texto "
