--- a/c-api/bytes.po
+++ b/c-api/bytes.po
@@ -53,7 +53,7 @@ msgid ""
 "of the bytes type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si el objeto *o* es un objeto bytes o una instancia de un "
-"subtipo del tipo bytes. Esta función siempre tiene éxito."
+"subtipo del tipo bytes. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/bytes.rst:33
 msgid ""
@@ -61,7 +61,7 @@ msgid ""
 "subtype of the bytes type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si el objeto *o* es un objeto bytes, pero no una instancia "
-"de un subtipo del tipo bytes. Esta función siempre tiene éxito."
+"de un subtipo del tipo bytes. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/bytes.rst:39
 msgid ""
