--- a/c-api/call.po
+++ b/c-api/call.po
@@ -40,7 +40,7 @@ msgid ""
 "callable. The signature of the slot is::"
 msgstr ""
 "Las instancias de clases que establecen :c:member:`~PyTypeObject.tp_call` "
-"son invocables. La firma de la ranura es:"
+"son invocables. La firma del slot es:"
 
 #: ../Doc/c-api/call.rst:19
 msgid ""
@@ -252,7 +252,7 @@ msgstr ""
 
 #: ../Doc/c-api/call.rst:121
 msgid "Recursion Control"
-msgstr "Control de Recursión"
+msgstr "Control de recursión"
 
 #: ../Doc/c-api/call.rst:123
 msgid ""
@@ -276,7 +276,7 @@ msgstr ""
 
 #: ../Doc/c-api/call.rst:134
 msgid "Vectorcall Support API"
-msgstr "API de Soporte para Vectorcall"
+msgstr "API de soporte para vectorcall"
 
 #: ../Doc/c-api/call.rst:138
 msgid ""
@@ -312,7 +312,7 @@ msgstr ""
 "Si *op* no admite el protocolo vectorcall (ya sea porque el tipo no lo hace "
 "o porque la instancia específica no lo hace), retorna *NULL*. De lo "
 "contrario, retorna el puntero de la función vectorcall almacenado en *op*. "
-"Esta función nunca genera una excepción."
+"Esta función nunca lanza una excepción."
 
 #: ../Doc/c-api/call.rst:158
 msgid ""
@@ -344,7 +344,7 @@ msgstr ""
 
 #: ../Doc/c-api/call.rst:183
 msgid "Object Calling API"
-msgstr "API para Invocar Objetos"
+msgstr "API para invocar objetos"
 
 #: ../Doc/c-api/call.rst:185
 msgid ""
@@ -581,7 +581,7 @@ msgstr ""
 
 #: ../Doc/c-api/call.rst:289
 msgid "The type of *format* was changed from ``char *``."
-msgstr "El tipo de *format* se cambió de ``char *``."
+msgstr "El tipo de *format* se cambió desde ``char *``."
 
 #: ../Doc/c-api/call.rst:295
 msgid ""
@@ -616,7 +616,7 @@ msgstr ""
 
 #: ../Doc/c-api/call.rst:310
 msgid "The types of *name* and *format* were changed from ``char *``."
-msgstr "Los tipos de *name* y *format* se cambiaron de ``char *``."
+msgstr "Los tipos de *name* y *format* se cambiaron desde ``char *``."
 
 #: ../Doc/c-api/call.rst:316
 msgid ""
@@ -740,4 +740,4 @@ msgid ""
 "callable and ``0`` otherwise.  This function always succeeds."
 msgstr ""
 "Determina si el objeto *o* es invocable. Retorna ``1`` si el objeto es "
-"invocable y ``0`` en caso contrario. Esta función siempre tiene éxito."
+"invocable y ``0`` en caso contrario. Esta función siempre finaliza con éxito."
