--- a/c-api/capsule.po
+++ b/c-api/capsule.po
@@ -69,7 +69,7 @@ msgid ""
 "succeeds."
 msgstr ""
 "Retorna verdadero si su argumento es a :c:type:`PyCapsule`. Esta función "
-"siempre tiene éxito."
+"siempre finaliza con éxito."
 
 #: ../Doc/c-api/capsule.rst:43
 msgid ""
