--- a/c-api/datetime.po
+++ b/c-api/datetime.po
@@ -77,7 +77,7 @@ msgid ""
 "be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DateType`. *ob* no "
-"debe ser ``NULL``. Esta función siempre tiene éxito."
+"debe ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/datetime.rst:43
 msgid ""
@@ -95,7 +95,7 @@ msgid ""
 "not be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DateTimeType`. *ob* "
-"no debe ser ``NULL``. Esta función siempre tiene éxito."
+"no debe ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/datetime.rst:56
 msgid ""
@@ -105,7 +105,7 @@ msgid ""
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_TimeType` o un "
 "subtipo de :c:data:`PyDateTime_TimeType`. *ob* no debe ser ``NULL``. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/datetime.rst:63
 msgid ""
@@ -113,7 +113,7 @@ msgid ""
 "be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_TimeType`. *ob* no "
-"debe ser ``NULL``. Esta función siempre tiene éxito."
+"debe ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/datetime.rst:69
 msgid ""
@@ -131,7 +131,7 @@ msgid ""
 "be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DeltaType`. *ob* no "
-"debe ser ``NULL``. Esta función siempre tiene éxito."
+"debe ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/datetime.rst:82
 msgid ""
@@ -149,7 +149,7 @@ msgid ""
 "not be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_TZInfoType`. *ob* "
-"no debe ser ``NULL``. Esta función siempre tiene éxito."
+"no debe ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/datetime.rst:93
 msgid "Macros to create objects:"
