--- a/c-api/dict.po
+++ b/c-api/dict.po
@@ -47,7 +47,7 @@ msgid ""
 "type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto ``dict`` o una instancia de un subtipo "
-"del tipo ``dict``. Esta función siempre tiene éxito."
+"del tipo ``dict``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/dict.rst:30
 msgid ""
@@ -55,7 +55,7 @@ msgid ""
 "dict type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto ``dict``, pero no una instancia de un "
-"subtipo del tipo ``dict``. Esta función siempre tiene éxito."
+"subtipo del tipo ``dict``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/dict.rst:36
 msgid "Return a new empty dictionary, or ``NULL`` on failure."
@@ -253,7 +253,7 @@ msgstr ""
 "verdadero para cada par en el diccionario y falso una vez que todos los "
 "pares han sido reportados. Los parámetros *pkey* y *pvalue* deben apuntar a "
 "variables :c:type:`PyObject*` que se completarán con cada clave y valor, "
-"respectivamente, o pueden ser ``NULL``. Todas las referencias devueltas a "
+"respectivamente, o pueden ser ``NULL``. Todas las referencias retornadas a "
 "través de ellos se toman prestadas. *ppos* no debe modificarse durante la "
 "iteración. Su valor representa compensaciones dentro de la estructura del "
 "diccionario interno y, dado que la estructura es escasa, las compensaciones "
