--- a/c-api/float.po
+++ b/c-api/float.po
@@ -48,7 +48,7 @@ msgid ""
 "type:`PyFloatObject`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si su argumento es un :c:type:`PyFloatObject` o un subtipo "
-"de :c:type:`PyFloatObject`. Esta función siempre tiene éxito."
+"de :c:type:`PyFloatObject`. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/float.rst:30
 msgid ""
@@ -56,7 +56,7 @@ msgid ""
 "of :c:type:`PyFloatObject`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si su argumento es un :c:type:`PyFloatObject`, pero no un "
-"subtipo de :c:type:`PyFloatObject`. Esta función siempre tiene éxito."
+"subtipo de :c:type:`PyFloatObject`. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/float.rst:36
 msgid ""
