--- a/c-api/gen.po
+++ b/c-api/gen.po
@@ -52,7 +52,7 @@ msgid ""
 "function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es un objeto generador; *ob* no debe ser ``NULL``. "
-"Esta función siempre tiene éxito."
+"Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/gen.rst:31
 msgid ""
@@ -60,7 +60,7 @@ msgid ""
 "``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si el tipo de *ob* es :c:type:`PyGen_Type`; *ob* no debe "
-"ser ``NULL``. Esta función siempre tiene éxito."
+"ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/gen.rst:37
 msgid ""
