--- a/c-api/init.po
+++ b/c-api/init.po
@@ -1416,7 +1416,7 @@ msgstr ""
 
 #: ../Doc/c-api/init.rst:845
 msgid "Deprecated function which does nothing."
-msgstr "Función obsoleta que no hace nada."
+msgstr "Función deprecada que no hace nada."
 
 #: ../Doc/c-api/init.rst:847
 msgid ""
@@ -2317,7 +2317,7 @@ msgid ""
 "Otherwise, the function *func* can be scheduled to be called from the wrong "
 "interpreter."
 msgstr ""
-"Para llamar a esta función en un subinterprete, la persona que llama debe "
+"Para llamar a esta función en un subinterprete, quien llama debe "
 "mantener el GIL. De lo contrario, la función *func* se puede programar para "
 "que se llame desde el intérprete incorrecto."
 
