--- a/c-api/intro.po
+++ b/c-api/intro.po
@@ -271,7 +271,7 @@ msgid ""
 msgstr ""
 "Si una ruta de código es un código muy poco probable pero se puede acceder "
 "en casos excepcionales, esta macro no debe utilizarse. Por ejemplo, en "
-"condiciones de poca memoria o si una llamada al sistema devuelve un valor "
+"condiciones de poca memoria o si una llamada al sistema retorna un valor "
 "fuera del rango esperado. En este caso, es mejor informar el error a la "
 "persona que llama. Si no se puede informar del error a la persona que llama, "
 "se puede utilizar :c:func:`Py_FatalError`."
@@ -376,7 +376,7 @@ msgstr ""
 
 #: ../Doc/c-api/intro.rst:227
 msgid "Objects, Types and Reference Counts"
-msgstr "Objetos, Tipos y Conteos de Referencias"
+msgstr "Objetos, tipos y conteos de referencias"
 
 #: ../Doc/c-api/intro.rst:231
 msgid ""
