--- a/c-api/iterator.po
+++ b/c-api/iterator.po
@@ -56,7 +56,7 @@ msgid ""
 "always succeeds."
 msgstr ""
 "Retorna verdadero si el tipo de *op* es :c:data:`PySeqIter_Type`. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/iterator.rst:30
 msgid ""
@@ -83,7 +83,7 @@ msgid ""
 "always succeeds."
 msgstr ""
 "Retorna verdadero si el tipo de *op* es :c:data:`PyCallIter_Type`. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/iterator.rst:49
 msgid ""
