--- a/c-api/list.po
+++ b/c-api/list.po
@@ -45,7 +45,7 @@ msgid ""
 "type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto de lista o una instancia de un subtipo "
-"del tipo lista. Esta función siempre tiene éxito."
+"del tipo lista. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/list.rst:30
 msgid ""
@@ -53,7 +53,7 @@ msgid ""
 "list type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto lista, pero no una instancia de un "
-"subtipo del tipo lista. Esta función siempre tiene éxito."
+"subtipo del tipo lista. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/list.rst:36
 msgid "Return a new list of length *len* on success, or ``NULL`` on failure."
