--- a/c-api/method.po
+++ b/c-api/method.po
@@ -52,7 +52,7 @@ msgid ""
 msgstr ""
 "Retorna verdadero si *o* es un objeto de método de instancia (tiene tipo :c:"
 "data:`PyInstanceMethod_Type`). El parámetro no debe ser ``NULL``. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/method.rst:30
 msgid ""
@@ -107,7 +107,7 @@ msgid ""
 msgstr ""
 "Retorna verdadero si *o* es un objeto de método (tiene tipo :c:data:"
 "`PyMethod_Type`). El parámetro no debe ser ``NULL``. Esta función siempre "
-"tiene éxito."
+"finaliza con éxito."
 
 #: ../Doc/c-api/method.rst:73
 msgid ""
