--- a/c-api/module.po
+++ b/c-api/module.po
@@ -41,7 +41,7 @@ msgid ""
 "function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto de módulo o un subtipo de un objeto de "
-"módulo. Esta función siempre tiene éxito."
+"módulo. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/module.rst:27
 msgid ""
@@ -49,7 +49,7 @@ msgid ""
 "`PyModule_Type`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto módulo, pero no un subtipo de :c:data:"
-"`PyModule_Type`. Esta función siempre tiene éxito."
+"`PyModule_Type`. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/module.rst:40
 msgid ""
