--- a/c-api/set.po
+++ b/c-api/set.po
@@ -102,7 +102,7 @@ msgid ""
 "This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`set` o una instancia de un "
-"subtipo. Esta función siempre tiene éxito."
+"subtipo. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/set.rst:60
 msgid ""
@@ -110,7 +110,7 @@ msgid ""
 "subtype.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`frozenset` o una instancia de "
-"un subtipo. Esta función siempre tiene éxito."
+"un subtipo. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/set.rst:65
 msgid ""
@@ -118,7 +118,7 @@ msgid ""
 "an instance of a subtype.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`set`, un objeto :class:"
-"`frozenset`, o una instancia de un subtipo. Esta función siempre tiene éxito."
+"`frozenset`, o una instancia de un subtipo. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/set.rst:71
 msgid ""
@@ -126,8 +126,8 @@ msgid ""
 "but not an instance of a subtype.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`set` o un objeto :class:"
-"`frozenset` pero no una instancia de un subtipo. Esta función siempre tiene "
-"éxito."
+"`frozenset` pero no una instancia de un subtipo. Esta función siempre "
+"finaliza con éxito."
 
 #: ../Doc/c-api/set.rst:77
 msgid ""
@@ -135,7 +135,7 @@ msgid ""
 "subtype.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`frozenset` pero no una "
-"instancia de un subtipo. Esta función siempre tiene éxito."
+"instancia de un subtipo. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/set.rst:83
 msgid ""
