--- a/c-api/tuple.po
+++ b/c-api/tuple.po
@@ -45,7 +45,7 @@ msgid ""
 "tuple type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto tupla o una instancia de un subtipo "
-"del tipo tupla. Esta función siempre tiene éxito."
+"del tipo tupla. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/tuple.rst:30
 msgid ""
