--- a/c-api/type.po
+++ b/c-api/type.po
@@ -48,7 +48,7 @@ msgid ""
 msgstr ""
 "Retorna un valor distinto de cero si el objeto *o* es un objeto tipo, "
 "incluidas las instancias de tipos derivados del objeto de tipo estándar. "
-"Retorna 0 en todos los demás casos. Esta función siempre tiene éxito."
+"Retorna 0 en todos los demás casos. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/type.rst:31
 msgid ""
@@ -58,7 +58,7 @@ msgid ""
 msgstr ""
 "Retorna un valor distinto de cero si el objeto *o* es un objeto tipo, pero "
 "no un subtipo del objeto tipo estándar. Retorna 0 en todos los demás casos. "
-"Esta función siempre tiene éxito."
+"Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/type.rst:38
 msgid "Clear the internal lookup cache. Return the current version tag."
