--- a/c-api/typeobj.po
+++ b/c-api/typeobj.po
@@ -1624,7 +1624,7 @@ msgid ""
 "Before version 3.8, this slot was named ``tp_print``. In Python 2.x, it was "
 "used for printing to a file. In Python 3.0 to 3.7, it was unused."
 msgstr ""
-"Antes de la versión 3.8, esta ranura se llamaba ``tp_print``. En Python 2.x, "
+"Antes de la versión 3.8, este slot se llamaba ``tp_print``. En Python 2.x, "
 "se usó para imprimir en un archivo. En Python 3.0 a 3.7, no se usó."
 
 #: ../Doc/c-api/typeobj.rst:721
