--- a/c-api/weakref.po
+++ b/c-api/weakref.po
@@ -45,20 +45,20 @@ msgid ""
 "always succeeds."
 msgstr ""
 "Retorna verdadero (true) si *ob* es una referencia o un objeto proxy. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/weakref.rst:22
 msgid ""
 "Return true if *ob* is a reference object.  This function always succeeds."
 msgstr ""
 "Retorna verdadero (true) si *ob* es un objeto de referencia. Esta función "
-"siempre tiene éxito."
+"siempre finaliza con éxito."
 
 #: ../Doc/c-api/weakref.rst:27
 msgid "Return true if *ob* is a proxy object.  This function always succeeds."
 msgstr ""
 "Retorna verdadero (true) si *ob* es un objeto proxy. Esta función siempre "
-"tiene éxito."
+"finaliza con éxito."
 
 #: ../Doc/c-api/weakref.rst:32
 msgid ""
