--- a/c-api/long.po
+++ b/c-api/long.po
@@ -62,7 +62,7 @@ msgid ""
 "type:`PyLongObject`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si su argumento es un :c:type:`PyLongObject` o un subtipo "
-"de :c:type:`PyLongObject`. Esta función siempre tiene éxito."
+"de :c:type:`PyLongObject`. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/long.rst:35
 msgid ""
@@ -70,7 +70,7 @@ msgid ""
 "of :c:type:`PyLongObject`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si su argumento es un :c:type:`PyLongObject`, pero no un "
-"subtipo de :c:type:`PyLongObject`. Esta función siempre tiene éxito."
+"subtipo de :c:type:`PyLongObject`. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/long.rst:41
 msgid ""
