--- a/c-api/call.po
+++ b/c-api/call.po
@@ -74,7 +74,7 @@ msgstr ""
 
 #: ../Doc/c-api/call.rst:36
 msgid "The Vectorcall Protocol"
-msgstr "El Protocolo Vectorcall"
+msgstr "El protocolo vectorcall"
 
 #: ../Doc/c-api/call.rst:40
 msgid ""
