--- a/c-api/tuple.po
+++ b/c-api/tuple.po
@@ -53,7 +53,7 @@ msgid ""
 "the tuple type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto tupla pero no una instancia de un "
-"subtipo del tipo tupla. Esta función siempre tiene éxito."
+"subtipo del tipo tupla. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/tuple.rst:36
 msgid "Return a new tuple object of size *len*, or ``NULL`` on failure."
