--- a/c-api/arg.po
+++ b/c-api/arg.po
@@ -559,14 +559,14 @@ msgid ""
 msgstr ""
 "Requiere tres argumentos. El primero solo se usa como entrada, y debe ser :c:"
 "type:`const char*` que apunta al nombre de una codificación como una cadena "
-"de caracteres terminada en NUL, o ``NULL``, en cuyo caso ``Se utiliza la codificación "
-"'utf-8'``. Se lanza una excepción si Python no conoce la codificación con "
-"nombre. El segundo argumento debe ser :c:type:`char**`; El valor del puntero "
-"al que hace referencia se establecerá en un búfer con el contenido del texto "
-"del argumento. El texto se codificará en la codificación especificada por el "
-"primer argumento. El tercer argumento debe ser un puntero a un entero; el "
-"número entero referenciado se establecerá en el número de bytes en el búfer "
-"de salida."
+"de caracteres terminada en NUL, o ``NULL``, en cuyo caso ``Se utiliza la "
+"codificación 'utf-8'``. Se lanza una excepción si Python no conoce la "
+"codificación con nombre. El segundo argumento debe ser :c:type:`char**`; El "
+"valor del puntero al que hace referencia se establecerá en un búfer con el "
+"contenido del texto del argumento. El texto se codificará en la codificación "
+"especificada por el primer argumento. El tercer argumento debe ser un "
+"puntero a un entero; el número entero referenciado se establecerá en el "
+"número de bytes en el búfer de salida."
 
 #: ../Doc/c-api/arg.rst:231
 msgid "There are two modes of operation:"
