--- a/c-api/init.po
+++ b/c-api/init.po
@@ -2317,9 +2317,9 @@ msgid ""
 "Otherwise, the function *func* can be scheduled to be called from the wrong "
 "interpreter."
 msgstr ""
-"Para llamar a esta función en un subinterprete, quien llama debe "
-"mantener el GIL. De lo contrario, la función *func* se puede programar para "
-"que se llame desde el intérprete incorrecto."
+"Para llamar a esta función en un subinterprete, quien llama debe mantener el "
+"GIL. De lo contrario, la función *func* se puede programar para que se llame "
+"desde el intérprete incorrecto."
 
 #: ../Doc/c-api/init.rst:1422
 msgid ""
