--- a/c-api/set.po
+++ b/c-api/set.po
@@ -118,7 +118,8 @@ msgid ""
 "an instance of a subtype.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`set`, un objeto :class:"
-"`frozenset`, o una instancia de un subtipo. Esta función siempre finaliza con éxito."
+"`frozenset`, o una instancia de un subtipo. Esta función siempre finaliza "
+"con éxito."
 
 #: ../Doc/c-api/set.rst:71
 msgid ""
