--- a/c-api/complex.po
+++ b/c-api/complex.po
@@ -155,7 +155,8 @@ msgid ""
 "c:type:`PyComplexObject`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si su argumento es un :c:type:`PyComplexObject` o un "
-"subtipo de :c:type:`PyComplexObject`. Esta función siempre finaliza con éxito."
+"subtipo de :c:type:`PyComplexObject`. Esta función siempre finaliza con "
+"éxito."
 
 #: ../Doc/c-api/complex.rst:102
 msgid ""
@@ -163,7 +164,8 @@ msgid ""
 "subtype of :c:type:`PyComplexObject`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si su argumento es un :c:type:`PyComplexObject`, pero no "
-"un subtipo de :c:type:`PyComplexObject`. Esta función siempre finaliza con éxito."
+"un subtipo de :c:type:`PyComplexObject`. Esta función siempre finaliza con "
+"éxito."
 
 #: ../Doc/c-api/complex.rst:108
 msgid ""
